Css fix for tabs on mobile

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -3096,8 +3096,8 @@ tfoot td {
 .content-tabs::part(tab-list) {
   border-block-end: 1px solid rgb(var(--border-color));
   white-space: nowrap;
-  grid-auto-flow: column;
-  justify-content: start;
+  grid-auto-flow: row;
+  justify-content: center;
   gap: 2.5rem;
   margin-block-end: 1.5rem;
   display: grid;
